deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aip-admin-front
  namespace: aip
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aip-admin-front
  template:
    metadata:
      labels:
        app: aip-admin-front
    spec:
      containers:
        - name: streamlit
          image: acrsample.azurecr.io/aip-admin-front/dev/aip-admin-front:1.0.0
          ports:
            - containerPort: 8501
          resources:
            requests:
              memory: 200Mi
              cpu: 200m
            limits:
              memory: 200Mi
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /
              port: 8501
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8501
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 3    
          securityContext:
            runAsNonRoot: true                   # 컨테이너가 루트 권한으로 실행되지 않도록 설정
            allowPrivilegeEscalation: false      # 권한 상승을 막음
            readOnlyRootFilesystem: true         # 루트 파일 시스템을 읽기 전용으로 설정
            runAsUser: 10000                     # UID를 10000으로 설정하여 호스트와의 충돌 방지
            capabilities:
              drop:
              - ALL                              # 기본 권한을 모두 제거
          imagePullPolicy: IfNotPresent          # 로컬에 이미지가 없는 경우에만 최신 이미지를 가져오도록 설정
