service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aip-admin-front
  namespace: aip
spec:
  type: ClusterIP
  selector:
    app: aip-admin-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
